nexus-staging-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -55,9 +55,7 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <profiles>
-        <profile>
-            <id>release</id>
+
             <build>
                 <plugins>
                     <plugin>
@@ -100,10 +98,20 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                        <version>1.6.8</version>
+                        <extensions>true</extensions>
+                        <configuration>
+                            <serverId>ossrh</serverId>
+                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
-        </profile>
-    </profiles>
+
     <dependencies>
         <dependency>
             <groupId>com.google.code.gson</groupId>
