--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,29 @@
     <groupId>com.github.styxco</groupId>
     <artifactId>messages</artifactId>
     <version>1.0.0</version>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.8</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <packaging>jar</packaging>
     <name>Library for messaging</name>
     <description>STYX Library for messaging</description>
@@ -60,7 +82,9 @@
         <java.version>1.8</java.version>
     </properties>
 
-
+    <profiles>
+    <profile>
+    <id>release</id>
             <build>
                 <plugins>
                     <plugin>
@@ -116,6 +140,8 @@
                     </plugin>
                 </plugins>
             </build>
+    </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
